Fix alignment footer

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -23,10 +23,12 @@
 
       @include mixin.tablet {
         flex-direction: column;
+        align-items: center;
       }
 
       a {
         color: white;
+        text-align: center;
 
         &:hover {
           color: var(--soft-red);
